5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1679_1105.log
== TEST (2019-05-02 02:17:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = int(input("Descricao do brasao: "))

print("Entrada:", brasao)

if(brasao == lobo):
	print("Casa: Stark")
elif(brasao == leao):
	print("Casa: Lannister")
elif(brasao == veado):
	print("Baratheon")
elif(brasao == dragao):
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Tyrell")
elif(brasao == sol):
	print("Casa: Martell")
elif(brasao == lula):
	print("Casa: Greyjoy")
elif(brasao == esfolado)
	print("Casa: Bolton")
elif(brasao == turta)
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 26
    elif(brasao == esfolado)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:20:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = int(input("Descricao do brasao: "))

print("Entrada:", brasao)

if(brasao == lobo):
	print("Casa: Stark")
elif(brasao == leao):
	print("Casa: Lannister")
elif(brasao == veado):
	print("Baratheon")
elif(brasao == dragao):
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Tyrell")
elif(brasao == sol):
	print("Casa: Martell")
elif(brasao == lula):
	print("Casa: Greyjoy")
elif(brasao == esfolado):
	print("Casa: Bolton")
elif(brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    brasao = int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:20:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == lobo):
	print("Casa: Stark")
elif(brasao == leao):
	print("Casa: Lannister")
elif(brasao == veado):
	print("Baratheon")
elif(brasao == dragao):
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Tyrell")
elif(brasao == sol):
	print("Casa: Martell")
elif(brasao == lula):
	print("Casa: Greyjoy")
elif(brasao == esfolado):
	print("Casa: Bolton")
elif(brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:22:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == lobo):
	print("Casa: Stark")
elif(brasao == leao):
	print("Casa: Lannister")
elif(brasao == veado):
	print("Baratheon")
elif(brasao == dragao):
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Tyrell")
elif(brasao == sol):
	print("Casa: Martell")
elif(brasao == lula):
	print("Casa: Greyjoy")
elif(brasao == esfolado):
	print("Casa: Bolton")
elif(brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 02:23:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == lobo):
	print("Casa: Stark")
elif(brasao == leao):
	print("Casa: Lannister")
elif(brasao == veado):
	print("Baratheon")
elif(brasao == dragao):
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Tyrell")
elif(brasao == sol):
	print("Casa: Martell")
elif(brasao == lula):
	print("Casa: Greyjoy")
elif(brasao == esfolado):
	print("Casa: Bolton")
elif(brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:19:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == lobo):
	print("Casa: Stark")
elif(brasao == leao):
	print("Casa: Lannister")
elif(brasao == veado):
	print("Baratheon")
elif(brasao == dragao):
	print("Casa: Targaryen")
elif(brasao == rosa):
	print("Tyrell")
elif(brasao == sol):
	print("Casa: Martell")
elif(brasao == lula):
	print("Casa: Greyjoy")
elif(brasao == esfolado):
	print("Casa: Bolton")
elif(brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:22:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:23:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:24:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.169712
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:25:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.20774
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:26:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.138866
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:29:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.220953
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:47) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:30:00) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

brasao = input("Descricao do brasao: ")

print("Entrada:", brasao)

if(brasao == "lobo"):
	print("Casa: Stark")
elif(brasao == "leao"):
	print("Casa: Lannister")
elif(brasao == "veado"):
	print("Baratheon")
elif(brasao == "dragao"):
	print("Casa: Targaryen")
elif(brasao == "rosa"):
	print("Casa: Tyrell")
elif(brasao == "sol"):
	print("Casa: Martell")
elif(brasao == "lula"):
	print("Casa: Greyjoy")
elif(brasao == "esfolado"):
	print("Casa: Bolton")
elif(brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.213993
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
